[tool.poetry]
name = "nonebot-plugin-apexranklookup"
version = "0.1.6"
description = ""
authors = ["Windylh"]
readme = "README.md"
packages = [{include = "nonebot_plugin_apexranklookup"}]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.4.0"
pydantic = "^1.10.6"
nonebot2 = "^2.0.0rc3"
nonebot-adapter-onebot = "^2.2.1"
requests = "^2.28.2"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
